[package]
name = "neural"
version = "0.0.1"
edition = "2021"
authors = ["Dylan Muraco <dylanjmuraco@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustgrad"
path = "src/lib.rs"

[profile.release]
opt-level = 3

[dependencies]
csv = "1.1.6"
num = "0.4.0"
rand = "0.8.5"

